fix: tab overflow

--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,8 @@ header {
   font: bold 2rem Arial;
   user-select: none;
   text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 #sidebar-filter-tabs *:hover,
